Getting started instructions

--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "policy-review-2023",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "reveal-md": "^2.4.1"
-  }
+	"name": "policy-review-2023",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"deck": "reveal-md src/index.md"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"reveal-md": "^2.4.1"
+	}
 }
